# notes-for-learning-to-program

API/: apiNotes.txt
Cardano/: cardanoNotes.txt  cardanoUsefulLinks.txt
Code/: veryUsefulLink.txt
Git/: gitNotes.txt
Mailgun/: mailgunNotes.txt
Miscellaneous/To Be Determined/: toBeDetermenedNotes.txt
Nix/: nixNotes.txt  nixUsefulLinks.txt
Nix/nix_Text_Scripts_Code/: shell.nix
PHP/Laravel/laravel_Notes/: laravelNotes.txt  laravelUsefulLinks.txt
PHP/Tinkerwell/: tinkerwellNotes.txt
Plutus/plutus_Notes/: plutusNotes.txt
Programming/API/: apiNotes.txt
Programming/Cardano/: cardanoNotes.txt
Programming/Git/: gitNotes.txt
Programming/HTML/html_Text_Scripts_Code/: htmlSandbox.txt
Programming/Haskell/haskell_Notes/: haskellUsefulLinks.txt
Programming/Marlowe/: marloweNotes.txt
Programming/Nix/: nixUsefulLinks.txt
Programming/Terminal/: terminalNotes.txt
Programming/Vim/: vimNotes.txt
SSH/: sshNotes.txt
Terminal/: terminalNotes.txt  terminalUsefulLinks.txt
Tinkerwell/: tinkerwellNotes.txt
Vim/: vimNotes.txt
abundantsolutions.dev/abundantsolutions.dev/: abundantsolutions-dev.cabal
abundantsolutions.dev/usefulLinks/: hakyllstaticSite.txt
calendar/: TheBar  original-flake.nix  to-do  to-read
calendar/2022-december/: end-dec
calendar/2023-january/: beg-jan
calendar/nftcollection-diagrams-svg/: links-and-notes.txt
calendar/pickaxe/: README.md  pickaxe.cabal  shell.nix  the-ore.hs
functional-programming/cardano/: cardano-useful-links.txt
functional-programming/haskell-notes/: haskell-notes.txt
functional-programming/nix/: nix-notes.txt
functional-programming/nix/nix-text-scripts-code/bob-hilbert-curve/: CHANGELOG.md  bob-hilbert-curve.cabal  shell.nix
functional-programming/nix/nix-text-scripts-code/bob-hilbert-curve/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
functional-programming/nix/nix-text-scripts-code/bob-hilbert-curve/exe/: Main.hs
functional-programming/nix/nix-text-scripts-code/bob-mandelbrot/: CHANGELOG.md  LICENSE  bob-mandelbrot.cabal  shell.nix
functional-programming/nix/nix-text-scripts-code/bob-mandelbrot/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
functional-programming/nix/nix-text-scripts-code/bob-mandelbrot/exe/: Main.hs
functional-programming/nix/nix-text-scripts-code/sand-castle/: CHANGELOG.md  sand-castle.cabal  shell.nix
functional-programming/nix/nix-text-scripts-code/sand-castle/app/: Main.hs
functional-programming/nix/nix-text-scripts-code/sand-castle/app/tmp/: output.json
functional-programming/nix/nix-text-scripts-code/sand-castle/dist-newstyle/cache/: compiler  config
functional-programming/nix/nix-text-scripts-code/sand-castle/nix/: sources.json
linux/crontab/: crontab-notes.txt
linux/git/: git-notes.txt
linux/ssh/: ssh-notes.txt
linux/systemd-timers/: systemd-useful-links.txt
linux/terminal/: terminal-notes.txt
linux/tmux/: tmux-notes.txt  tmux-useful-links.txt
server/discord/: useful-links.txt
server/redis/: redis-notes.txt
(+126 files in other folders)
