cabal-version:      3.0
name:               bob-hilbert-curve
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             N.J. Childs
maintainer:         sirbeerus@gmail.com
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable bob-hilbert-curve
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base,
		      text,
		      svg-builder,
                      diagrams,
                      hfsevents,
  	              diagrams-lib,
 	              diagrams-svg,
	              bytestring

    hs-source-dirs:   exe
    default-language: Haskell2010
