cabal-version:      3.4
name:               bob-mandelbrot
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             N.J. Childs
maintainer:         sirbeerus@gmail.com
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable bob-mandelbrot
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base,
		      svg-builder,
                      diagrams,
                      hfsevents,
  	              diagrams-lib,
 	              diagrams-svg,
	              bytestring

    hs-source-dirs:   exe
    default-language: Haskell2010
