cabal-version:      3.0
name:               sand-castle
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             N.J. Childs
maintainer:         sirbeerus@gmail.com
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable sand-castle
    import:           warnings
    main-is:          Main.hs
    build-depends:

        base ^>=4.14.1.0 && <4.15,
        ghc,
        ghcid,
        hlint,
        haskell-language-server ^>=1.7 && <2,
        cabal2nix,
        redis,
        hedis,
        bash,
        aeson,
        wreq >= 0.5,
        data-aeson-lens >= 0.1,
        data-aeson >= 0.9,
        control-lens >= 0.2,
        generic-data,
        zlib,
        curl,
        lens,
        text,
        template-haskell,
        bytestring,
        lens-aeson,
        process,
        shelly,
        cabal2nix,
        http,
        shelly-extra,
        turtle,
        scientific

    hs-source-dirs:   app
    default-language: Haskell2010

